<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RC遥控器</string>
    <string name="connection_status">连接状态</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">蓝牙</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="settings">设置</string>
    <string name="throttle">油门</string>
    <string name="steering">转向</string>
    <string name="servo_left">左转</string>
    <string name="servo_center">回中</string>
    <string name="servo_right">右转</string>
    <string name="gyro_mode">陀螺仪模式</string>
    <string name="joystick_mode">摇杆模式</string>
    <string name="calibrate">校准</string>
    <string name="ip_address">IP地址</string>
    <string name="port">端口</string>
    <string name="device_name">设备名称</string>
    <string name="command_template">指令模板</string>
    <string name="on_command">开指令</string>
    <string name="off_command">关指令</string>
    <string name="save">保存</string>
    <string name="export_config">导出配置</string>
    <string name="import_config">导入配置</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="connecting">正在连接...</string>
    
    <string-array name="control_source_options">
        <item>左摇杆Y (油门)</item>
        <item>左摇杆X (转向)</item>
        <item>右摇杆Y (油门)</item>
        <item>右摇杆X (转向)</item>
        <item>按键 1</item>
        <item>按键 2</item>
        <item>按键 3</item>
        <item>按键 4</item>
        <item>开关 1</item>
        <item>开关 2</item>
        <item>无 (中性 1500)</item>
    </string-array>

    <string-array name="mixed_source_options">
        <item>油门 (Throttle)</item>
        <item>转向 (Steering)</item>
        <item>无 (中性 1500)</item>
    </string-array>
</resources>
